# BERTopic-as-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml  pr-notification.yml
k8s/bertopic/: deployment.yaml  secret.yml  service.yml
k8s/jobs/: migration-deployment.yaml  migration-secrets.yaml  minio-create-key-deployment.yaml  minio-create-key-secrets.yaml
k8s/minio/: deployment.yaml  pv.yml  pvc.yml  secrets.yaml  service.yaml
k8s/namespace/: ns.yaml
k8s/postgres/: deployment.yaml  postgres-pv.yml  postgres-pvc.yml  secrets.yaml  service.yaml
migrations/: env.py
migrations/versions/: 4d6b1048aef5_add_model_creation_time.py  de6b38f9aed7_init.py
service/: main.py
service/api/: api.py  deps.py  utils.py
service/api/endpoints/: base.py  model_training.py  modeling.py  models.py  visualization.py
service/core/: config.py
service/crud/: __init__.py  base.py  topic.py  topic_model.py
service/db/: db.py
service/models/: models.py
service/schemas/: base.py  bertopic.py  bertopic_wrapper.py
tests/: conftest.py  test_bertopic_wrapper.py  test_modeling.py  test_visualization.py
